--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,5 @@
 *{
-    /* background-color: red; */
+ 
     margin: 0;
     box-sizing: border-box;
     font-family: Tahoma, Verdana, sans-serif;
@@ -10,7 +10,6 @@
     max-width: 1100px;
     margin: auto;
     height: 60px;
-    /* background-color: rgb(24, 116, 222); */
     display: flex;
     padding-top: 0px;
     gap: 10px;
@@ -28,14 +27,12 @@
     position: sticky;
     top: 0px;
     left: 0px;
-    /* border-bottom:1px solid #ccc; */
 }
 .nav2{
     gap: 30px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    /* width: 90%; */
     color: #fff !important;
    
 }
@@ -45,22 +42,14 @@
 }
 .home{
     font-family: Tahoma, Verdana, sans-serif;
-    /* position: relative;
-    top: 5px;
-    left: 20px; */
-    /* color: aliceblue; */
-    /* background-color: rgb(24, 116, 222); */
     text-decoration:none;
 }
 .book{
     font-size: 30px;
-    /* color: aliceblue;
-    background-color: rgb(24, 116, 222); */
     font-family: Tahoma, Verdana, sans-serif;
 }
 .Blog{
     color: black;
-    /* background-color: rgb(24, 116, 222); */
     font-family: Tahoma, Verdana, sans-serif;
 }
 .home-btn{
@@ -69,19 +58,9 @@
     align-items: center; 
      height: 60px;
     width: 60px;
-    /* background-color: rgb(24, 116, 222); */
 }
 .side{
-    /* background-color: aliceblue;
-    height: 100vh;
-    width: 200px; */
-    /* display: inline-block; */
-    /* position: fixed; */
-    /* margin-top: 10px; */
     padding-left: 10px;
-    
-   
-
 }
 
 .container{
@@ -108,12 +87,7 @@ li{
 .content{
     width: 100%;
     min-height: 100px;
-    /* margin-right: 40px;
-    margin-top: 40px;
-    margin-left:300px;  */
     border-radius: 10px;
-    /* border: 1px solid #ccc; */
-    /* background-color: aliceblue; */
     padding: 30px;
 }
 body{
@@ -163,10 +137,6 @@ height: 89.5vh;
 .inputblog{
     margin-top: 10px;
     margin-bottom: 10px;
-    /* margin-left: 15%; */
-    /* width: 70%;
-    height: 300px;
-    /* border-radius: 10px; */
     resize: none; 
     width: 100%;
     max-width: 650px;
@@ -179,7 +149,7 @@ height: 89.5vh;
     padding-left: 5px;
 }
 .inputsubmit{
-    --c: rgb(24, 116, 222); /* the color*/
+    --c: rgb(24, 116, 222); 
     border-radius: 7px;
     
     box-shadow: 0 0 0 .1em inset var(--c); 
@@ -203,16 +173,12 @@ height: 89.5vh;
     color: #fff;
   }
   .title{
-    /* width: 70%; */
     height: 20px;
   }
 h1,p{
     text-align: center;
 }
 h2{
-    /* text-align: center; */
-    /* margin-top: 20px;
-    margin-bottom: 20px; */
     margin: 10px;
     
 
@@ -224,18 +190,11 @@ p{
     
 }
 .abo{
-    /* width: 100%; */
     max-width: 1100PX;
     margin: auto;
-
-    /* display: flex; */
-    /* justify-content: space-around; */
-    /* align-items: center; */
-    /* height: 50vh; */
 }
 .ut{
     display: block;
-    /* border-radius: 40px; */
     border: 1px solid #ccc;
     background-color: black;
     width: 100%;
@@ -252,23 +211,22 @@ p{
     height: 80vh;
 }
 .info{
-    /* border-radius: 40px; */
     background-color: black;
     width: 30%;
     
     border: 1px solid #ccc;
 }
 input::placeholder {
-    color: #ccc; /* Default placeholder color */
-    opacity: 1; /* Remove any transparency */}
+    color: #ccc; 
+    opacity: 1;
     
 textarea::placeholder{
     color: #ccc; 
     opacity: 1;
 }
 p {
-    word-wrap: break-word; /* Ensures long words or text break onto a new line */
-    overflow-wrap: break-word; /* Another way to ensure text breaks onto a new line */
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 .contt{
     max-width: 1100px;
@@ -277,7 +235,6 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: rgb(24, 116, 222); */
     background-color: black;
     flex-direction: column;
 }
